Change image path

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer>
       <div class="container">
         <h5 class="text-center my-4">The app is powered by
-        <img src="/img/giphy_logo.gif" class="logo mx-auto" alt=""></h5>
+        <img src="./img/giphy_logo.gif" class="logo mx-auto" alt=""></h5>
         </div>
       </div>
     </footer>
